added JVM support for Docker memory limits